# webtodo

./: .dockerignore  AGENTS.md  README.md  docker-compose.yml  run.sh
.github/workflows/: rust.yml
todo_backend/: .env  .gitignore  Cargo.toml  Dockerfile  entrypoint.sh
todo_backend/migrations/2025-06-10-162123_create_todo_items_table/: down.sql  up.sql
todo_backend/migrations/2025-06-10-162123_create_users_table/: up.sql
todo_backend/migrations/2025-06-10-162124_create_sessions_table/: up.sql
todo_backend/src/: db.rs  lib.rs  main.rs  models.rs  schema.rs
todo_backend/src/services/: auth.rs  error.rs  mod.rs  todos.rs
todo_backend/static/: index.html  script.js  style.css
todo_backend/tests/: test_main.rs
