[package]
name = "todo_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json", "uuid"] } # Added "uuid" feature to rocket
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] } # Aligned with Rocket 0.5's dependency
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5.3"

[dev-dependencies]
serde_json = "1.0" # For json! macro in tests
